Bug 1677817 - GMPParent::Init() crash due to Preferences::GetBool() call off main thread. r=spohl,bryce a=RyanVM

Use static prefs for the Rosetta GMP plugin checks to allow them to be safely accessed off the main thread.

Differential Revision: https://phabricator.services.mozilla.com/D97367